--- a/app/src/main/res/layout/content_bar_account.xml
+++ b/app/src/main/res/layout/content_bar_account.xml
@@ -6,6 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_marginBottom="45dp"
+    android:layout_marginTop="15dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_bar_account">
 
