--- a/app/src/main/res/menu/top_bar_menu.xml
+++ b/app/src/main/res/menu/top_bar_menu.xml
@@ -6,9 +6,9 @@
 
 
     <item
-        android:id="@+id/action_send"
+        android:id="@+id/action_logout"
         android:title="Logout"
-        android:icon="@android:drawable/ic_menu_search"
+        android:icon="@drawable/ic_log_out"
         app:showAsAction="always"
         />
 
